[package]
name = "fdaf-aec"
version = "0.2.0"
edition = "2021"
description = "An Acoustic Echo Canceller (AEC) using the Frequency Domain Adaptive Filter (FDAF) algorithm."
keywords = ["aec", "audio", "dsp", "echo", "cancellation"]
categories = ["multimedia::audio", "algorithms"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deeptrue-org/fdaf-aec"

[dependencies]
nalgebra = "0.32.3"
num-complex = "0.4.4"
rustfft = "6.1.0"

[dev-dependencies]
hound = "3.5.1"
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
